k3s/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: cmh1506/spociii-backend:1.0.29
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 3000
        resources: {}
