k3s/002-nginx-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    name: frontend
