k3s/03-frontend-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend

spec:
  type: LoadBalancer
  ports:
    - targetPort: web
      port: 80

  selector:
    app: frontend
