k3s/backend-loadbalancer.service.yaml
apiVersion: v1
kind: Service
metadata:
 name: backend-loadbalancer
spec:
 type: LoadBalancer
 selector:
    app: backend
 ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
