k3s/frontend-loadbalancer.service.yaml
apiVersion: v1
kind: Service
metadata:
 name: frontend-loadbalancer
spec:
 type: LoadBalancer
 selector:
    app: frontend
 ports:
  - name: "80"
    port: 8080
    targetPort: 80
