k3s/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - protocol: HTTP
      port: 80
      name: http
