k3s/003-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-nginx-ingress
  annotations:
    #app.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: code4u2.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-nginx-service
              port:
                number: 80
