k3s/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginxhello-httproute
spec:
  hostnames:
    # Replace hostname with something appropriate for
    # the set up you have configured. Or, remove.
    - 172-18-255-200.nip.io
  parentRefs:
    - name: http-gateway
  rules:
    - backendRefs:
        - name: nginxhello
          port: 80
