k3s/spoc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spoc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: code4u.cloud
    http:
      paths:
      - path: "/spoc"
        pathType: Prefix
        backend:
          service:
            name: frontend-loadbalancer
            port:
              number: 80
